# semnon_quest

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.claude/: settings.json
data/: sq_banner.txt
data/ascii/: church.txt  houses.txt
data/locations/: askas_rest.json  church_light.json  street.json
data/schemas/: location.schema.json
docs/: design.md  git_conventions.md
inc/: Engine.hpp  includes.hpp
src/: main.cpp
src/classes/: Engine.cpp
src/core/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Option.hpp
src/main/: main.cpp
src/ui/: Display.hpp  Menu.cpp  Menu.hpp  TerminalDisplay.cpp  TerminalDisplay.hpp
src/utils/: LocationLoader.cpp  LocationLoader.hpp
src/world/: Connection.hpp  Location.cpp  Location.hpp  LocationManager.cpp  LocationManager.hpp  Scene.cpp  Scene.hpp
